# Kiosko-Impresi-n

./: .env.example  README.md  SUPABASE_ENTERPRISE_SETUP.sql  SUPABASE_MASTER_SETUP.sql  SUPABASE_RLS.sql  SUPABASE_SETUP_GALLERY.sql  index.html  metadata.json  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml
public/: manifest.json  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  fix-icon.js  fix-icon.ts  fix-icon2.ts  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActivationScreen.tsx  AdModal.tsx  AuthGuard.tsx  AuthScreen.tsx  DeviceSyncModal.tsx  ErrorBoundary.tsx  Gallery.tsx  KioskAdCarousel.tsx  KioskAdOverlay.tsx  KioskAdSidebar.tsx  LicenseGuard.tsx  PhotoEditor.tsx  PhotoPrintCreator.tsx  SEO.tsx  TemplateNav.tsx
src/components/admin/: AdminAds.tsx  AdminLogs.tsx  (+3 more)
src/constants/: editor.ts
src/context/: LicenseContext.tsx
src/hooks/: useAdTargeting.ts  useAdminStats.ts  useAnalytics.ts  useBgRemoval.ts  useEditorKeyboard.ts  usePrintEngine.ts  useStorage.ts  useSupabaseQuery.ts
src/lib/: imageUtils.ts  layouts.ts  pdfUtils.ts  storage.ts  supabase.ts
src/pages/: AdminPanel.tsx  Dashboard.test.tsx  Dashboard.tsx  Legal.tsx
src/services/: ConfigService.ts  LicenseService.ts  LoggerService.ts  licenseService.ts  loggerService.ts
src/store/: useAdStore.ts  useAuthStore.ts  usePhotoStore.test.ts  usePhotoStore.ts
src/types/: photo.ts
src/workers/: aiWorker.ts
(+5 files in other folders)
