[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
machine-uid = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"

[profile.release]
panic = "abort" # Reduce binary size
codegen-units = 1 # Better optimization
lto = true # Link Time Optimization
opt-level = "s" # Optimize for size
strip = true # Remove debug symbols (obfuscation)
